tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/int_to_bool.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
const x:bool = 5

